added banner section

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ph assignment-2</title>
-   
+
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
         integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
@@ -24,26 +25,38 @@
 
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <header>
-       <div class="container">
-        <nav class="display-flex">
-            <img src="./assets/logo.png" alt="">
-            <ul class="display-flex">
-                <li><a href="">Home</a></li>
-                <li><a href="">Shop</a></li>
-                <li><a href="">About us </a></li>
-                <li><i class="fa-solid fa-cart-shopping"></i> Cart ($56)</li>
-                
-            </ul>
-        </nav>
-       </div>
-       <!-- banner section -->
-       <!-- <section>
+        <div class="container">
+            <nav class="display-flex">
+                <img src="./assets/logo.png" alt="">
+                <ul class="display-flex">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Shop</a></li>
+                    <li><a href="">About us </a></li>
+                    <li><i class="fa-solid fa-cart-shopping"></i> Cart ($56)</li>
+
+                </ul>
+            </nav>
+        </div>
+        <!-- banner section -->
+        <section class="banner-section">
             <div class="container">
-                di
+                <div class="banner display-flex">
+                    <div class="banner-content">
+                        <h1>ALWAYS <span class="banner-text-color-title">FRESH FLOWERS</span></h1>
+                        <p>Indulge your senses with the beauty and fragrance of our fresh flower shop.
+                            From classic roses to exotic blooms, we
+                            offer a wide variety of fresh flowers that are perfect for any occasion.</p>
+                    </div>
+                    <div class="banner-imgage">
+                        <img src="./assets/hero-flower.png" alt="">
+                    </div>
+                </div>
             </div>
-       </section> -->
+        </section>
     </header>
 </body>
+
 </html>
