--- a/index.html
+++ b/index.html
@@ -56,7 +56,100 @@
                 </div>
             </div>
         </section>
+
+    
     </header>
+    <!-- main  -->
+    <main>
+
+        <!-- plants section -->
+        <section class="plants-section">
+            <div class="container">
+                <div class="plants">
+                    <div class="plants-title">
+                        <h1><span>Our</span> Plants</h1>
+                        <p>Indulge your senses with the beauty and fragrance of our fresh flower shop.
+                            From classic roses to exotic blooms, we
+                            offer a wide variety of fresh.</p>
+                    </div>
+                    <div class="carts">
+                        <div class="cart">
+                            <img src="./assets/sample-flower-image.png" alt="">
+                            <p>Lily Blossom</p>
+                            <h3>20 USD</h3>
+                            <button>ADD TO CART</button>
+                        </div>
+                        <div class="cart">
+                            <img src="./assets/sample-flower-image.png" alt="">
+                            <p>Lily Blossom</p>
+                            <h3>20 USD</h3>
+                            <button>ADD TO CART</button>
+                        </div>
+                        <div class="cart">
+                            <img src="./assets/sample-flower-image.png" alt="">
+                            <p>Lily Blossom</p>
+                            <h3>20 USD</h3>
+                            <button>ADD TO CART</button>
+                        </div>
+                        <div class="cart">
+                            <img src="./assets/sample-flower-image.png" alt="">
+                            <p>Lily Blossom</p>
+                            <h3>20 USD</h3>
+                            <button>ADD TO CART</button>
+                        </div>
+                        <div class="cart">
+                            <img src="./assets/sample-flower-image.png" alt="">
+                            <p>Lily Blossom</p>
+                            <h3>20 USD</h3>
+                            <button>ADD TO CART</button>
+                        </div>
+                        <div class="cart">
+                            <img src="./assets/sample-flower-image.png" alt="">
+                            <p>Lily Blossom</p>
+                            <h3>20 USD</h3>
+                            <button>ADD TO CART</button>
+                        </div>
+                        <div class="cart">
+                            <img src="./assets/sample-flower-image.png" alt="">
+                            <p>Lily Blossom</p>
+                            <h3>20 USD</h3>
+                            <button>ADD TO CART</button>
+                        </div>
+                        <div class="cart">
+                            <img src="./assets/sample-flower-image.png" alt="">
+                            <p>Lily Blossom</p>
+                            <h3>20 USD</h3>
+                            <button>ADD TO CART</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- flower section -->
+            <section class="flower-plants">
+                <div class="container">
+                    <div class="flowers-container display-flex">
+                        <div class="flower-img">
+                            <img class="flower-store" src="./assets/flower-store.png" alt="">
+                            <img class="flower-trust" src="./assets/trusted-badge.png" alt="">
+                        </div>
+                        <div class="flower-content">
+                            <h2>Flower & Plants Lover</h2>
+                            <ul>
+                                <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we
+                                offer a wide variety of fresh.</li>
+                                <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we
+                                offer a wide variety of fresh.</li>
+                                <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we
+                                offer a wide variety of fresh.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+            </section>
+    </main>
 </body>
 
 </html>
