add flower section and latest deal

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
         </section>
 
-    
+
     </header>
     <!-- main  -->
     <main>
@@ -127,28 +127,68 @@
             </div>
         </section>
         <!-- flower section -->
-            <section class="flower-plants">
-                <div class="container">
-                    <div class="flowers-container display-flex">
-                        <div class="flower-img">
-                            <img class="flower-store" src="./assets/flower-store.png" alt="">
-                            <img class="flower-trust" src="./assets/trusted-badge.png" alt="">
+        <section class="flower-plants">
+            <div class="container">
+                <div class="flowers-container display-flex">
+                    <div class="flower-img">
+                        <img class="flower-store" src="./assets/flower-store.png" alt="">
+                        <img class="flower-trust" src="./assets/trusted-badge.png" alt="">
+                    </div>
+                    <div class="flower-content">
+                        <h2>Flower & Plants Lover</h2>
+                        <ul>
+                            <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
+                                roses to exotic blooms, we
+                                offer a wide variety of fresh.</li>
+                            <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
+                                roses to exotic blooms, we
+                                offer a wide variety of fresh.</li>
+                            <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
+                                roses to exotic blooms, we
+                                offer a wide variety of fresh.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <!-- latest deals -->
+        <section class="latest-deal">
+            <div class="container">
+                <div class="deals">
+                    <div class="deal-title">
+                        <h1><span class="color">Latest</span> Deals</h1>
+                        <p>Indulge your senses with the beauty and fragrance of our fresh flower shop.
+                            From classic roses to exotic blooms, we
+                            offer a wide variety of fresh.</p>
+                    </div>
+
+                    <div class="deal-img">
+                        <div class="parent-1">
+                            <img class="deal-ana" src="./assets/deal-ana.png" alt="">
+                            <div class="deal-1">
+
+                                <h1>60% Off | Bloom Plant</h1>
+                                <a href="">Shop Now</a>
+                            </div>
+                            <div class="parent-2">
+                                <img class="deal-bloom" src="./assets/deal-bloom.png" alt="">
+                                <div class="deal-1" >
+                                    <h1>30% Off | Ana Plant</h1>
+                                    <a href="">Shop Now</a>
+                                </div>
+                            </div>
                         </div>
-                        <div class="flower-content">
-                            <h2>Flower & Plants Lover</h2>
-                            <ul>
-                                <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we
-                                offer a wide variety of fresh.</li>
-                                <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we
-                                offer a wide variety of fresh.</li>
-                                <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we
-                                offer a wide variety of fresh.</li>
-                            </ul>
+                        <div class="parent-3">
+                            <img class="deal-zabo" src="./assets/deal-zabo.png" alt="">
+                            <div class="deal-2">
+                                <h1>25% Off | Zabo Plant</h1>
+                                <a href="">Shop Now</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-
-            </section>
+        </section>
     </main>
 </body>
 
