--- a/index.html
+++ b/index.html
@@ -189,6 +189,20 @@
                     </div>
                 </div>
         </section>
+
+
+        <!-- join section -->
+         <section class="join-section">
+           
+            <div class="join-title">
+                <h1>Join the colorful Bunch</h1>
+                <div class="join-input display-flex">
+                    <input class="email" type="email" placeholder="write email">
+                    <button class="btn">Subscribe</button>
+                </div>
+            </div>
+
+         </section>
     </main>
 </body>
 
