add footer section

--- a/index.html
+++ b/index.html
@@ -204,6 +204,39 @@
 
          </section>
     </main>
+    <!-- footer section -->
+     <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-despription">
+                    <img src="./assets/logo.png" alt="">
+                    <p>Indulge your senses with the beauty and fragrance of our fresh flower shop.</p>
+                </div>
+                <div class="icon-1">
+                    
+                       <a href="">Home</a>
+                      <a href="">About Us</a>
+                       <a href="">Blog</a>
+                      <a href="">FAQ</a>
+                       <a href="">Contact Us</a>
+                   
+                </div>
+                <div class="icon-2">
+                    <a href="">Features</a>
+                    <a href="">Pricing</a>
+                    <a href="">Privacy Policy</a>
+                    <a href="">Terms of Service</a>
+                    <a href="">Help Center</a>
+                </div>
+                <div class="icon-3 ">
+                    <img src="./assets/icon-linkedin.png" alt="">
+                    <img src="./assets/icon-twitter.png" alt="">
+                    <img src="./assets/icon-facebook.png" alt="">
+                    <img src="./assets/icon-youtube.png" alt="">
+                </div>
+            </div>
+        </div>
+     </footer>
 </body>
 
 </html>
